src/test/ui/consts/const-eval/promoted_errors.stderr
error: attempt to divide by zero
  --> $DIR/promoted_errors.rs:8:20
   |
LL |     println!("{}", 1/(1-1));
   |                    ^^^^^^^
   |
note: lint level defined here
  --> $DIR/promoted_errors.rs:3:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: reaching this expression at runtime will panic or abort
  --> $DIR/promoted_errors.rs:8:20
   |
LL |     println!("{}", 1/(1-1));
   |                    ^^^^^^^ attempt to divide by zero

error: attempt to divide by zero
  --> $DIR/promoted_errors.rs:11:14
   |
LL |     let _x = 1/(1-1);
   |              ^^^^^^^

error: this expression will panic at runtime
  --> $DIR/promoted_errors.rs:11:14
   |
LL |     let _x = 1/(1-1);
   |              ^^^^^^^ attempt to divide by zero

error: attempt to divide by zero
  --> $DIR/promoted_errors.rs:14:20
   |
LL |     println!("{}", 1/(false as u32));
   |                    ^^^^^^^^^^^^^^^^

error: reaching this expression at runtime will panic or abort
  --> $DIR/promoted_errors.rs:14:20
   |
LL |     println!("{}", 1/(false as u32));
   |                    ^^^^^^^^^^^^^^^^ attempt to divide by zero

error: attempt to divide by zero
  --> $DIR/promoted_errors.rs:17:14
   |
LL |     let _x = 1/(false as u32);
   |              ^^^^^^^^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/promoted_errors.rs:17:14
   |
LL |     let _x = 1/(false as u32);
   |              ^^^^^^^^^^^^^^^^ attempt to divide by zero

error: aborting due to 8 previous errors

